--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,12 @@ body::-webkit-scrollbar {
     background-color: aliceblue;
 }
 
+.down-arrow {
+    position: fixed;
+    top: 90vh;
+    left: 47vw;
+}
+
 .wedding-banner-text {
     font-size: 40px;
     color: azure;
@@ -44,4 +50,15 @@ body::-webkit-scrollbar {
     .wedding-banner-all {
         margin-top: 35vh;
     }
+}
+
+footer {
+    height: 5vh;
+    background-color: aliceblue;
+}
+
+footer > .col {
+    text-align: center;
+    height: 100%;
+    vertical-align: center;
 }
