--- a/css/styles.css
+++ b/css/styles.css
@@ -16,14 +16,14 @@ body::-webkit-scrollbar {
     background-position: 65%;
 }
 
-#event-details {
+#events {
     background-color: aliceblue;
 }
 
 .down-arrow {
-    position: fixed;
+    position: absolute;
     top: 90vh;
-    left: 47vw;
+    left: 49vw;
 }
 
 .wedding-banner-text {
