--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ body::-webkit-scrollbar {
 }
 
 #wedding-banner {
-  background: url("/assets/landing.jpeg") no-repeat center center;
+  background: url("/assets/landing.webp") no-repeat center center;
   background-size: cover;
   background-position: 65%;
   height: inherit;
