--- a/css/styles.scss
+++ b/css/styles.scss
@@ -40,7 +40,7 @@ body::-webkit-scrollbar {
 }
 
 #wedding-banner {
-  background: url("/assets/landing.jpeg") no-repeat center center;
+  background: url("/assets/landing.webp") no-repeat center center;
   background-size: cover;
   background-position: 65%;
   height: inherit;
@@ -128,7 +128,7 @@ footer > .col {
       rgba(255, 255, 255, 0.212) 0%,
       rgba(255, 255, 255, 0.616) 100%
     ),
-    url("/assets/821.jpg");
+    url("/assets/821.webp");
   background-position: center;
   background-repeat: repeat;
   background-size: 30%;
