Added some changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -304,4 +304,29 @@ footer > .col {
 #gallery .carasoul {
   padding: 10%;
 }
+
+#video {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.212)), to(rgba(255, 255, 255, 0.616))), url("/assets/821.webp");
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.212) 0%, rgba(255, 255, 255, 0.616) 100%), url("/assets/821.webp");
+  background-position: center;
+  background-repeat: repeat;
+  background-size: 30%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#video iframe {
+  height: 100vh;
+  padding: 0px;
+  width: 100vw;
+  border: 3px solid #000;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  left: 0;
+}
 /*# sourceMappingURL=styles.css.map */
