--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,13 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Licorice&display=swap");
 body {
-  height: 100vh !important;
-  width: 100vw !important;
+  min-height: 100vh;
+  width: 100vw;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.212)), to(rgba(255, 255, 255, 0.616))), url("/assets/821.webp");
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.212) 0%, rgba(255, 255, 255, 0.616) 100%), url("/assets/821.webp");
+  background-position: center;
+  background-repeat: repeat;
+  background-size: 30%;
 }
 
 body::-webkit-scrollbar {
@@ -33,23 +38,10 @@ body::-webkit-scrollbar {
           flex-direction: column;
 }
 
-.container-fluid {
-  padding: 0px !important;
-}
-
-.section {
-  height: 100vh !important;
-}
-
-#gallery {
-  min-height: 50vh;
-}
-
 #wedding-banner {
   background: url("/assets/landing.webp") no-repeat center center;
   background-size: cover;
   background-position: 65%;
-  height: inherit;
 }
 
 .fas {
@@ -101,11 +93,6 @@ body::-webkit-scrollbar {
   }
 }
 
-footer {
-  height: 5vh;
-  background-color: aliceblue;
-}
-
 h1 {
   font-family: "Mea Culpa", cursive;
   font-weight: 500;
@@ -129,33 +116,6 @@ footer > .col {
 .fp-tooltip {
   color: black !important;
   font-family: "IBM Plex Sans", serif !important;
-}
-
-#bride-groom {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.212)), to(rgba(255, 255, 255, 0.616))), url("/assets/821.webp");
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.212) 0%, rgba(255, 255, 255, 0.616) 100%), url("/assets/821.webp");
-  background-position: center;
-  background-repeat: repeat;
-  background-size: 30%;
-  text-align: center;
-}
-
-#bride-groom h1 {
-  margin-top: 3%;
-  margin-bottom: 3%;
-}
-
-#bride-groom .row .alt {
-  display: none;
-}
-
-@media only screen and (max-width: 600px) {
-  #bride-groom .row .alt {
-    display: inline !important;
-  }
-  #bride-groom .row .second {
-    display: none !important;
-  }
 }
 
 #bride-groom .row .col-md-6 {
@@ -187,124 +147,28 @@ footer > .col {
       align-self: center;
 }
 
-#events {
-  text-align: center;
+.background-white {
   background-color: #eeeeee;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-#events h1 {
-  margin-top: 4%;
+#events img {
+  max-height: 250px;
 }
 
-#events .row {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-#events #reverse {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: column-reverse;
-          flex-direction: column-reverse;
-}
-
-#events #one {
-  padding-left: 5% !important;
-  padding-right: 0px;
-}
-
-#events #two {
-  padding-right: 5% !important;
-  padding-left: 0px;
-}
-
-@media only screen and (max-width: 600px) {
-  #events #reverse {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  #events #one {
-    padding: 1% !important;
-  }
-  #events #two {
-    padding: 1% !important;
-    padding-right: 1% !important;
-  }
-}
-
-#events .col-md-3 {
-  padding: 1%;
-  margin: 4%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  -ms-flex-item-align: center;
-      align-self: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-#events .col-md-3 p {
-  font-size: 3rem;
+#events p {
+  font-size: 2rem;
   font-weight: 700;
   font-family: "Licorice", cursive;
   margin: 1%;
   padding: 1%;
-}
-
-#events .col-md-3 span {
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-#events .col-md-3 img {
-  height: 200px;
-}
-
-#events .col-md-6 {
-  margin-bottom: 5%;
-}
-
-#events .col-md-6 p {
-  font-size: 3rem;
-  font-weight: 700;
-  font-family: "Licorice", cursive;
-  margin: 1%;
-  padding: 1%;
-}
-
-#events .col-md-6 span {
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-#events .col-md-6 img {
-  height: 250px;
 }
 
 #gallery {
   text-align: center;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.212)), to(rgba(255, 255, 255, 0.616))), url("/assets/821.webp");
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.212) 0%, rgba(255, 255, 255, 0.616) 100%), url("/assets/821.webp");
-  background-position: center;
-  background-repeat: repeat;
-  background-size: 30%;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 #gallery h1 {
@@ -315,5 +179,10 @@ footer > .col {
 #gallery .gallery-item {
   height: 200px;
   padding: 5px;
+}
+
+.enagagement-video {
+  height: 70vh;
+  width: 100%;
 }
 /*# sourceMappingURL=styles.css.map */
