--- a/css/styles.scss
+++ b/css/styles.scss
@@ -168,12 +168,12 @@ footer > .col {
   }
   text-align: center;
   overflow-y: scroll;
+  overflow-x: hidden;
 
   .gallery-item {
     height: 200px;
     padding: 5px;
   }
-
 }
 
 .enagagement-video {
