--- a/css/styles.scss
+++ b/css/styles.scss
@@ -99,6 +99,11 @@ h1 {
   font-size: 5.5rem;
 }
 
+.section-header {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 footer > .col {
   text-align: center;
   height: 100%;
@@ -175,9 +180,3 @@ footer > .col {
     padding: 5px;
   }
 }
-
-.enagagement-video {
-  height: 70vh;
-  width: 100%;
-}
-
