--- a/css/styles.scss
+++ b/css/styles.scss
@@ -201,12 +201,14 @@ footer > .col {
     padding: 5px;
   }
 }
+
 footer {
   padding: 3%;
   font-size: 2rem;
   font-family: "Licorice", cursive;
 }
-#video {
+
+#engagement {
   @media only screen and (max-width: 600px) {
     .design {
       display: none;
