Changing to inline gallery

--- a/css/styles.css
+++ b/css/styles.css
@@ -194,9 +194,9 @@ footer > .col {
   font-weight: 500;
 }
 
-#gallery .gallery-item {
-  height: 200px;
-  padding: 5px;
+.inline-gallery-container {
+  height: 75vh;
+  width: 100%;
 }
 
 footer {
