--- a/css/styles.css
+++ b/css/styles.css
@@ -220,4 +220,20 @@ footer {
   -webkit-transform: rotateX(180deg);
           transform: rotateX(180deg);
 }
+
+@media only screen and (max-width: 600px) {
+  #prewedding .design {
+    display: none;
+  }
+}
+
+#prewedding .design {
+  position: absolute;
+  left: -20px;
+  top: -40px;
+  height: 300px;
+  opacity: 0.5;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
 /*# sourceMappingURL=styles.css.map */
