--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ body::-webkit-scrollbar {
           flex-direction: column;
 }
 
-#wedding-banner {
+.wedding-banner {
   background: url("/assets/landing.webp") no-repeat center center;
   background-size: cover;
   background-position: 65%;
@@ -121,21 +121,21 @@ footer > .col {
   font-family: "IBM Plex Sans", serif !important;
 }
 
-#bride-groom .row .col-md-6 {
+.bride-groom .row .col-md-6 {
   padding-left: 7%;
   padding-right: 7%;
   padding-top: 3%;
   padding-bottom: 3%;
 }
 
-#bride-groom .row .col-md-6 h2 {
+,bride-groom .row .col-md-6 h2 {
   font-family: "Love Light", cursive;
   font-size: 5rem;
   margin-bottom: 5%;
   font-weight: 500;
 }
 
-#bride-groom .row .text-part {
+.bride-groom .row .text-part {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -160,11 +160,11 @@ footer > .col {
   }
 }
 
-#events img {
+.events img {
   max-height: 250px;
 }
 
-#events .design {
+.events .design {
   position: absolute;
   left: 0px;
   top: -50px;
@@ -175,7 +175,7 @@ footer > .col {
           transform: rotate(160deg);
 }
 
-#events p {
+.events p {
   font-size: 2rem;
   font-weight: 700;
   font-family: "Licorice", cursive;
@@ -183,13 +183,13 @@ footer > .col {
   padding: 1%;
 }
 
-#gallery {
+.gallery {
   text-align: center;
   overflow-y: scroll;
   overflow-x: hidden;
 }
 
-#gallery h1 {
+.gallery h1 {
   margin: 2%;
   font-weight: 500;
 }
@@ -211,7 +211,7 @@ footer {
   }
 }
 
-#engagement .design {
+.engagement .design {
   position: absolute;
   right: -10px;
   top: -40px;
@@ -222,12 +222,12 @@ footer {
 }
 
 @media only screen and (max-width: 600px) {
-  #prewedding .design {
+  .prewedding .design {
     display: none;
   }
 }
 
-#prewedding .design {
+.prewedding .design {
   position: absolute;
   left: -20px;
   top: -40px;
