--- a/css/styles.scss
+++ b/css/styles.scss
@@ -204,6 +204,9 @@ footer {
 
 .engagement {
   @media only screen and (max-width: 600px) {
+    .video {
+      margin-top: 20vh;
+    }
     .design {
       display: none;
     }
